<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AppCompactIOIOActivity"
    tools:layout_editor_absoluteY="137dp"
    tools:showIn="@layout/activity_new_measurement">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/row_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/MetricsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_margin"
                android:text="@string/new_measurement"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <GridLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/row0col0"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="@dimen/row_margin"
                    android:text="@string/pressure" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/row_margin"
                    android:layout_marginEnd="5sp"
                    android:minWidth="150dp"
                    android:textAlignment="viewEnd" />

                <TextView
                    android:id="@+id/row0col2"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/row_margin"
                    android:text="@string/mmhg" />

                <TextView
                    android:id="@+id/row1col0"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_margin="@dimen/row_margin"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/time"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/row_margin"
                    android:maxLines="1"
                    android:minWidth="135dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/row2col0"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_margin="@dimen/row_margin"
                    android:text="@string/frequency" />

                <TextView
                    android:id="@+id/frequency"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/row_margin"
                    android:layout_marginEnd="5sp"
                    android:text=""
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/row2col2"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/row_margin"
                    android:text="@string/mhz" />
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/start"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/save"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>